# manga-read-flow

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
data/: README.md
docs/: HLD-v0.2.md  HLD.md  PROJECT-PLAN.md  README.md  SRS-v1.0.md  需求分析草案.md
docs/000-project/: 000-00-product.md  000-10-architecture.md  000-20-roadmap.md  000-30-current.md  000-40-engineering.md
docs/010-workflow/: 010-00-stage-map.md  010-10-workflow-loop.md  010-20-quality-review-recovery.md
docs/adr/: README.md
docs/archive/: README.md  SRS-v0.9.md
docs/engineering/: code-health-gate.md
docs/prompt-patterns/: README.md
docs/reader/: 01-requirements-and-architecture.md  02-data-model.md  03-workflow-state.md  04-execution-contract.md  05-persistence-readiness.md  06-mvp0-fakeprovider-slice.md  README.md  current-status.md  stage-results.md
log/: LOG-2026-07-07.md  LOG-2026-07-08.md  LOG-2026-07-09.md  LOG-2026-07-10.md  LOG-TEMPLATE.md  README.md
prompts/page-translation/: repair-system-v1.md  system-v1.md
src/manga_read_flow/: __init__.py
tests/integration/: test_detection_evidence_handoff.py  test_detection_evidence_migration.py  test_fakeprovider_stageexecutor.py  test_full_page_cleaning_acceptance.py  test_full_page_cleaning_acceptance_migration.py  test_full_page_cleaning_harness.py  test_full_page_cleaning_ledger_foundation.py  test_full_page_cleaning_runner_seam.py  test_grouping_acceptance_application.py  test_grouping_acceptance_migration.py  test_grouping_candidate_application.py  test_grouping_candidate_migration.py  test_grouping_check_migration.py  (+9 more)
(+598 files in other folders)
