[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "manga-read-flow"
version = "0.1.0"
description = "Local manga translation and basic typesetting workflow"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.4,<3",
  "opencv-python-headless>=5.0,<6",
  "Pillow>=12.2,<13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "psutil>=7.2,<8",
  "scikit-image>=0.26,<0.27",
  "XlsxWriter>=3.2,<4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = ["--import-mode=importlib"]
